--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Ayushi</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="first-site/CSS/style.css">
     <link rel="icon" href="whiteheart.png">
 </head>
 <body>
