--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <div class="bottom">
     <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/">Twitter</a>
-    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <a class="footer-link" href="#">Website</a>
     <p class="cp">© 2022 Ayushi Gupta.</p>
   </div>  
 </body>
